# 5pmod-firmware

./: .gitignore  .gitlab-ci.yml  README.md  west.yml
blinky/: CMakeLists.txt
blinky/src/: main.c
boards/arm/5pmod_nrf52840/: 5pmod_nrf52840.dts  5pmod_nrf52840.yaml  5pmod_nrf52840_defconfig  Kconfig  Kconfig.board  Kconfig.defconfig
boards/arm/5pmod_nrf52840/doc/: index.rst
example_app/: 5pmod_nrf52840.overlay  CMakeLists.txt  prj.conf
smart_led/: 5pmod_nrf52840.overlay  CMakeLists.txt  prj.conf
smart_led/src/: main.c
